# DCiA_group6

./: README.md
DCiA/: pyproject.toml  tekentest.drawio
DCiA/dcia/: app.py  color_functions.py  construct_graph.py  dash_app.py  dash_components.py  expansion_network.py  f_colors.py  f_dash_components.py  f_feature_table.py  f_load_data.py  f_visualisation.py  feature_table.py  load_data.py  main_app.py  main_visualisation.py  network_layout.py  test.ipynb  usage-elements-extra.py  visualisation.py
DCiA/dcia/static/: style.css
DCiA/dcia/static/assets/: style.css
DCiA/dcia/static/data/: grant_att_table.csv  people_att_table.csv
DCiA/dcia/static/network_visualisations/: grant_application_graph.html  grants_applications_network_visualisation.ipynb  people_att_table.csv  publ_att_table.csv
DCiA/dcia/templates/: about.html  co_authorship.html  contact.html  dash.html  documentation.html  faqs.html  grant_applications.html  grant_applications_expansion.html  index.html  knowledge_sharing.html  layout.html  mission.html  pricing.html  product.html  sign_in.html  team.html
DCiA/django_consultancy/: pyproject.toml
DCiA/django_consultancy/ApolloSite/: manage.py
DCiA/django_consultancy/ApolloSite/ApolloSite/: asgi.py  plotly_app.py  settings.py  urls.py  views.py  wsgi.py
DCiA/django_consultancy/ApolloSite/ApolloSite/templates/ApolloSite/: dashboard.html  home.html
