[tool.poetry]
name = "dcia"
version = "0.1.0"
description = ""
authors = ["Floor99 <floorhalkes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.2"
pandas = "^2.2.1"
plotly = "^5.20.0"
nbformat = "^5.10.3"
dash-cytoscape = "^1.0.0"
dash = "^2.16.1"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
