[tool.poetry]
name = "django-consultancy"
version = "0.1.0"
description = ""
authors = ["Marijn <m.n.vanhouwelingen@tilburguniveristy.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
ipykernel = "^6.29.3"
dash-cytoscape = "^1.0.0"
django-plotly-dash = "^2.3.0"
setuptools = "^69.1.1"
channels-redis = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
